--- a/family.html
+++ b/family.html
@@ -6,14 +6,14 @@
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
-	<tite>Family Page</title>
+	<title>Family Page</title>
 </head>
 <body>
 	<header>
 	  <nav>
 		<ol>
 			<li><a href = "index.html">About Me</a></li>
-			<a href = "family.html">My Family</a>
+			<a href = "family.html">My Family</ahttps://github.com/mmadem/hw1-2023-/blob/main/family.html>
 			<li><a href = "random.html">Random Stuff</a></li>
 			<li><a href = "si.umich.edu">UMSI</a></li>
 		</ol>
