--- a/family.html
+++ b/family.html
@@ -3,36 +3,40 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
 </head>
 <body>
 	<header>
-	  <nav>
-		<ol>
-			<li><a href = "index.html">About Me</a></li>
-			<a href = "family.html">My Family</ahttps://github.com/mmadem/hw1-2023-/blob/main/family.html>
-			<li><a href = "random.html">Random Stuff</a></li>
-			<li><a href = "si.umich.edu">UMSI</a></li>
-		</ol>
-	   <nav>
+		<nav>
+			<ul>
+				<!-- Since I am on the index file I added class = action to the link to index. -->
+				<!-- For this homework leave the class on index for all three pages. -->
+				<li class="active"><a href = "index.html" >About Me</a></li>
+				<li><a href = "family.html">My Family</a></li>
+				<li><a href = "random.html">Random Stuff</a></li>
+				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
+			</ul>
+		</nav>
+		<h1>Family</h1>
 	</header>
 
-	<h1>Family</h1>
+	
 	
 	<main>
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
-			
-			<img src = "images/wiscosin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake"/>
-			<img src = "images/badlands.jpg" width="1000" alt = "the lands are bad"/>
-			<img src = "images/falling.jpg" width="25" alt = "A boy falling"/>
-			<img src = "images/rushmore.jpg" width="1000" alt = "stone is rushmore"/>
-			<img src = "images/jewel_cave.JPG" width="25" alt = "kids are exploring caves"/>
+			<img src = "images/wisconsin_dells.jpg" width="1000" alt = "A boy and two girls in zip line gear posing"/>
+			<img src = "images/badlands.jpg" width="1000" alt = "Kids standing infront of something"/>
+			<img src = "images/falling.jpg" width="1000" alt = "one boy falling"/>
+			<img src = "images/rushmore.jpg" width="1000" alt = "mount rushmore"/>
+			<img src = "images/jewel_cave.JPG" width="1000" alt = "fancy caves"/>
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
-	Colleen van Lent &copy; 2023
+	<footer>
+		<p>Colleen van Lent &copy; 2023</p>
+	</footer>
 </body>
 </html>
 
