--- a/random.html
+++ b/random.html
@@ -4,7 +4,7 @@
 	You will find any errors from the head section using the console. -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="imgs/favicon">
+	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="css/rest.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
@@ -13,21 +13,26 @@
 	<header>
 		<nav>
 			<ul>
-				<li>About Me</li>
-				<li>My Family</li>
-				<li>Random Stuff</li>
-				<li>UMSI</li>
+				<!-- Since I am on the index file I added class = action to the link to index. -->
+				<!-- For this homework leave the class on index for all three pages. -->
+				<li class="active"><a href = "index.html" >About Me</a></li>
+				<li><a href = "family.html">My Family</a></li>
+				<li><a href = "random.html">Random Stuff</a></li>
+				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
+		<h1>Random Page</h1>
 	</header>
 	
-	<h2>Random Page</h2>
+	<main>
 
 	<p>Make sure you are doing the readings from the <a href = "www.w3schools.com/html/">W3 Schools HTML 
-		tutorial</a> as well as the readings from Shay Howe's 
-		<a href = "https://learn.shayhowe.com/html-css/"<a>HTML and CSS tutorial</a>.
+		tutorial</a> as well as the readings from Shay Howe's <a href = "https://learn.shayhowe.com/html-css/">HTML and CSS tutorial</a>
+		
 
 	<p>Using the Piazza site is another great way to stay on top of your classwork</p>
+
+</main>
 
 	<footer>
 		<p>Colleen van Lent copy 2023</p>
